Gretchen/eigenschaften en (#613)
* FIX incorrect link noticed during translation

* FIX a few small issues noticed during translation

* UPDATE english translation, FIX a few issues noticed during translation

--- a/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen-namen.adoc
+++ b/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen-namen.adoc
@@ -9,9 +9,8 @@
 ([red]#Pflichtfeld#)
 |Gib einen Namen für die Eigenschaft in der angegebenen Sprache ein.
 
-Dieser Name kann für Kunden xref:artikel:eigenschaften.adoc#1500[im plentyShop sichtbar gemacht werden]. Dies hängt davon ab, wie du das Layout mit ShopBuilder gestaltest.
-//sichtbar im Webshop je nachdem wie man ShopBuilder konfiguriert?
-//Die Beschreibung wird angezeigt, wenn du mit dem Mauszeiger auf das Merkmal zeigst.
+Dieser Name kann für Kunden xref:artikel:eigenschaften.adoc#1500[im plentyShop sichtbar gemacht werden].
+Dies hängt davon ab, wie du das Layout mit ShopBuilder gestaltest.
 
 *_Hinweis_*: Der Name ist auf 255 Zeichen begrenzt.
 
@@ -20,13 +19,11 @@ Dieser Name kann für Kunden xref:artikel:eigenschaften.adoc#1500[im plentyShop 
 | *Beschreibung*
 |Gib eine Beschreibung für die Eigenschaft in der angegebenen Sprache ein.
 
-Derzeit ohne Funktion.
-In Zukunft wird es möglich sein, diese Beschreibung für Kunden xref:artikel:eigenschaften.adoc#1500[im plentyShop sichtbar zu machen].
-Dies wird davon abhängen, wie du das Layout mit ShopBuilder gestaltest.
-
-Eine mögliche Anwendung wird die Darstellung eines erklärenden Textes für eine Bestelleigenschaft sein.
-//sichtbar im Webshop je nachdem wie man ShopBuilder konfiguriert?
-//Die Beschreibung wird angezeigt, wenn du mit dem Mauszeiger auf das Merkmal zeigst.
+*_Anwendungsfall_*:
+Handelt es sich um eine Bestelleigenschaft mit Eingabefeld?
+Das heißt, ein Eingabefeld im plentyShop, in das Kunden einen Text eingeben können?
+Kunden werden diesen Beschreibungstext sehen können, wenn sie mit dem Mauszeiger über das Eingabefeld fahren.
+Eine mögliche Anwendung ist die Darstellung eines erklärenden Textes für die Bestelleigenschaft.
 
 *_Hinweis_*: Klicke auf icon:plus[role="darkGrey"], um die Beschreibung in weitere Sprachen zu übersetzen.
 
