--- a/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen-optionen.adoc
+++ b/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen-optionen.adoc
@@ -6,13 +6,12 @@
 |Einstellung |Erläuterung
 
 | *Einheiten* +
-(Derzeit ohne Funktion)
+(Keine Auswirkung auf plentyShop)
 |Handelt es sich bei der Eigenschaft um etwas wie ein Gewicht oder eine Länge, z.B. ein HDMI-Kabel mit einer Länge von 10 m?
-Da dieses Feld derzeit ohne Funktion ist, hat die Auswahl einer Einheit hier keine Auswirkungen.
-Gib der Eigenschaft stattdessen einen aussagekräftigen Namen, z.B. "Kabellänge (in Metern)".
+Wähle die passende xref:artikel:einheiten.adoc#[Einheit] aus der Dropdown-Liste.
 
-//sobald es funktionert, dann die 2 Zeilen löschen "Da diese Feld... und Gib der Eigenschaft..." und stattdessen die Zeile hier drunter einblenden
-//Falls ja, dann wähle die passende xref:artikel:einheiten.adoc#[Einheit].
+*_Hinweis_*: Die Wahl einer Einheit hat keine Auswirkung auf den plentyShop.
+Gib der Eigenschaft stattdessen einen aussagekräftigen Namen, z.B. "Kabellänge (in Metern)".
 
 | *Steuersatz*
 |
@@ -43,15 +42,20 @@ Die einzelnen Umsatzsteuersätze findest du im Menü xref:auftraege:buchhaltung.
 [cols="1,4a"]
 !===
 
-! *als Mehrzeiliges Textfeld anzeigen*
-!Diese Option ist für xref:artikel:personalisierte-artikel.adoc#[Bestelleigenschaften] relevant.
-Diese Option steuert, welche Art von Eingabefeld deine Kunden im plentyShop sehen werden, z.B. wenn sie einen Text eingeben, der auf einen Artikel graviert werden soll.
+! *als Mehrzeiliges Textfeld anzeigen* +
+(Derzeit ohne Funktion)
+!Diese Option ist für xref:artikel:personalisierte-artikel.adoc#[Bestelleigenschaften] gedacht.
+Derzeit ist die Option ohne Funktion.
+In Zukunft soll diese Option steuern, welche Art von Eingabefeld deine Kunden im plentyShop sehen, z.B. wenn sie einen Text eingeben, der auf einen Artikel graviert werden soll.
 
-icon:check-square[role="blue"] = Ein mehrzeiliges Eingabefeld soll angezeigt werden.
+//if this option ever does something in the future, then delete the text above and display the text below instead
 
-icon:square-o[role="blue"] = Ein einzeiliges Eingabefeld soll angezeigt werden.
+//Diese Option ist für xref:artikel:personalisierte-artikel.adoc#[Bestelleigenschaften] relevant.
+//Diese Option steuert, welche Art von Eingabefeld deine Kunden im plentyShop sehen werden, z.B. wenn sie einen Text eingeben, der auf einen Artikel graviert werden soll.
 
-*_Hinweis_*: Diese Option funktioniert noch nicht im plentyShop.
+//icon:check-square[role="blue"] = Ein mehrzeiliges Eingabefeld soll angezeigt werden.
+
+//icon:square-o[role="blue"] = Ein einzeiliges Eingabefeld soll angezeigt werden.
 
 ! *Bestelleigenschaft* +
 !Wähle diese Option (icon:check-square[role="blue"]), wenn die Eigenschaft als Bestelleigenschaft behandelt werden soll.
