--- a/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen-details.adoc
+++ b/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen-details.adoc
@@ -19,7 +19,7 @@ Je nachdem, welchen Bereich du hier wählst, ändern sich die weiteren Einstellu
 
 *_Hinweis_*: Diese Handbuchseite erklärt Eigenschaften vom Bereich *Artikel*.
 Solche Eigenschaften werden zur Charakterisierung von Produkten verwendet.
-Eigenschaften können aber auch für die nähere Charakterisierung von xref:crm:vorbereitende-einstellungen.adoc#eigenschaften-einleitung[Kontakten] oder xref:warenwirtschaft:lager-einrichten.adoc#850[Lagerorten] verwendet werden.
+Eigenschaften können aber auch für die nähere Charakterisierung von xref:crm:vorbereitende-einstellungen.adoc#eigenschaften-einleitung[Kontakten] oder xref:warenwirtschaft:properties.adoc#[Lagerorten] verwendet werden.
 Klicke auf die Links, um mehr über diese anderen Anwendungsfälle zu erfahren.
 
 | *Typ* +
@@ -111,13 +111,11 @@ Du willst für jeden Kopfhörer angeben, welche Profile unterstützt werden, z.B
 
 | *Position* +
 ([red]#Pflichtfeld#)
-|Gib eine Positionsnummer für die Eigenschaft ein.
-Standardmäßig wird aufsteigend nach Positionsnummer sortiert.
+|Welche Eigenschaft soll als erste, zweite, dritte, usw. angezeigt werden?
+Gib eine Positionsnummer in dieses Feld ein.
+Wenn eine Variante mehrere Eigenschaften hat, werden die Eigenschaften aufsteigend nach Positionsnummern in deinem plentyShop dargestellt.
 
 *_Tipp_*: Speichere die Positionsnummern in 10er-Schritten, damit du mögliche neue Eigenschaften dazwischen einfügen kannst.
-
-//hat die Positionsnummer eine Auswirkung für Varianten? Falls ja, dann diesen Text für item anzeigen lassen
-//Welche Eigenschaft soll als erste, zweite, dritte, usw. angezeigt werden? Gib eine Positionsnummer in dieses Feld ein. Wenn eine Variante mehrere Eigenschaften hat, werden die Eigenschaften aufsteigend nach Positionsnummern in deinem plentyShop dargestellt.
 |===
 
 //end::item[]
@@ -145,7 +143,7 @@ Je nachdem, welchen Bereich du hier wählst, ändern sich die weiteren Einstellu
 
 *_Hinweis_*: Diese Handbuchseite erklärt Eigenschaften vom Bereich *Kontakt*.
 Solche Eigenschaften werden z.B. zur Ausgabe von Kontakteigenschaften auf deinen Dokumenten verwendet.
-Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:warenwirtschaft:lager-einrichten.adoc#850[Lagerorten] verwendet werden.
+Eigenschaften können aber auch für die nähere Charakterisierung von xref:artikel:eigenschaften.adoc#500[Artikeln] oder xref:warenwirtschaft:properties.adoc#[Lagerorten] verwendet werden.
 Klicke auf die Links, um mehr über diese anderen Anwendungsfälle zu erfahren.
 
 | *Typ* +
