--- a/docs/de-de/modules/maerkte/pages/mytoys.adoc
+++ b/docs/de-de/modules/maerkte/pages/mytoys.adoc
@@ -168,12 +168,10 @@ include::partial$verkaufspreis-festlegen.adoc[]
 
 include::partial$zahlungsart_aktivieren.adoc[]
 
-[#500]
-=== Herkunft in Versandprofilen aktivieren
+[#mytoys-versandprofil]
+=== Versandprofil erstellen
 
-:referrer: myToys
 
-include::partial$shipping-profile-activate.adoc[]
 
 [#prepare-variations]
 == Varianten für Marktplatz aktivieren
