--- a/docs/de-de/modules/daten/pages/import-introduction.adoc
+++ b/docs/de-de/modules/daten/pages/import-introduction.adoc
@@ -40,7 +40,7 @@ Importe erstellst, bearbeitest und verwaltest du im Menü *Daten » Import*.
 
 Du bist noch neu in Sachen Importe? Dann empfehlen wir unsere Einführungsvideos.
 
-*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt. Eine Gute Einführung in das Thema bieten die Videos trotzdem.
+*_Hinweis:_* Der Begriff *ElasticSync* ist veraltet und wurde durch *Import* ersetzt. Eine gute Einführung in das Thema bieten die Videos trotzdem.
 
 [#imports-video-intro]
 === Video: Erste Schritte mit dem Import-Tool
