--- a/docs/en-gb/modules/markets/partials/mirakl-market-assistant.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-market-assistant.adoc
@@ -123,11 +123,23 @@ endif::voelkner[]
 2+^| Step *Offer export settings*
 
 | *Replace stock amount for items not limited to stock*
-| Do you want to export the same stock quantity for all variations without stock limitation?
 
-. Activate the option.
-. In the field *Quantity for items not limited to stock*, enter a number. +
-→ This number is exported as the stock for all variations without stock limitation.
+*Quantity for items that are not limited to the stock*
+| What stock quantity do you want to export for variations without stock limitation?
+
+[cols="1a,7a"]
+!===
+! icon:toggle_off[set=material]
+! The net stock is exported for all variations.
+
+! icon:toggle_on[set=material]
+! The quantity you enter in the field *Quantity for items not limited to stock* is exported for variations without stock limitation.
+
+  . Activate the option.
+  . In the field *Quantity for items not limited to stock*, enter a number. +
+  → This number is exported as the stock for variations without stock limitation. +
+  *_Important:_* If you do not enter a number or the number "0", the net stock is exported for all variations.
+!===
 
 *_What are variations without stock limitation?_*
 
@@ -136,15 +148,7 @@ Variations without stock limitation are variations with the setting *Limitation*
 * *None*
 * *Do not administer stock for this variation*
 
-You can find this setting in the menu xref:item:managing-items.adoc#200, Item » Edit item » [Open variation] » Tab: Settings » Area: Availability » Drop-down list: Limitation]. This setting is valid for all sales channels, not just for {market}.
+You can find this setting in the menu xref:item:managing-items.adoc#200, Item » Edit item » [Open variation\] » Tab: Settings » Area: Availability » Drop-down list: Limitation]. This setting is valid for all sales channels, not just for {market}.
 
-| *Quantity for items that are not limited to the stock*
-| What stock quantity do you want to export for variations without stock limitation?
-
-. Enter a number. +
-→ This number is exported as the stock for all variations without stock limitation.
-
-*_Important:_* You can only specify a quantity when the option *Replace stock amount for items not limited to stock* is active. +
-If you enter "0", variations without stock limitations are not exported.
 |======
 --
