--- a/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/installation-und-ersteinrichtung.adoc
@@ -30,6 +30,12 @@ Hast du sichergestellt, dass deine Geräte den oben beschriebenen Systemvorausse
 
 * Hier geht es zum link:https://play.google.com/store/apps/details?id=com.plentysystems.plentywarehouse[Download von plentyWarehouse im Google PlayStore^].
 
+[TIP]
+.Installationsanleitung für Zebra TC 21 und TC 26
+====
+Planst du, die plentyWarehouse App auf den Geräten Zebra TC 21 oder Zebra TC 26 zu nutzen? Dann findest du link:https://forum.plentymarkets.com/t/plentywarehouse-einrichtungsanleitung-zebra-tc21-26/646040[im plentymarkets Forum^] eine detaillierte Anleitung zur Installation der App auf diesen Geräten.
+====
+
 [#300]
 == In plentyWarehouse einloggen
 
