--- a/docs/de-de/modules/changelog/pages/2022-06-01.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-06-01.adoc
@@ -3,7 +3,7 @@
 :sectnums!:
 :page-index: false
 :startWeekDate: 26. Mai 2022
-:startWeekDate: 1. Juni 2022
+:endWeekDate: 1. Juni 2022
 
 // Ab diesem Eintrag weitermachen: https://forum.plentymarkets.com/t/kaufland-cron-fuer-versandbestaetigungen-wird-abgeschaltet-kaufland-cron-for-shipping-confirmations-disabled/682509
 
