--- a/docs/de-de/modules/daten/pages/ElasticSync.adoc
+++ b/docs/de-de/modules/daten/pages/ElasticSync.adoc
@@ -615,7 +615,7 @@ Importe vor dem Ausführen auf Fehler prüfen:
   * Klicke auf *Protokoll in Zwischenablage kopieren* (icon:content_copy[set=material]).
   * Füge die Informationen im Forum ein.
 
-[#1615]
+[#import-test]
 === Import testen
 
 Mit der Option *Import testen* kannst du prüfen, ob alle Importeinstellungen stimmen, bevor du große Datenmengen importierst.
@@ -632,7 +632,7 @@ Import testen:
 . Prüfe, ob die Daten wie erwartet importiert wurden.
 . Passe die Importeinstellungen bei Bedarf an.
 
-[#1615]
+[#import-manual]
 === Import manuell ausführen
 
 Wenn du in den Importeinstellungen ein Intervall festgelegt hast, wird die Datei automatisch regelmäßig importiert. Du kannst den Import aber auch jederzeit manuell starten.
@@ -764,7 +764,7 @@ Import kopieren:
 → Der Import wird kopiert. +
 → Der Name des kopierten Imports ist `Copy of [Name des Originalimports]`.
 
-[#1640]
+[#import-export]
 === Importeinstellungen exportieren
 
 Du kannst Importe als JSON-Datei exportieren. So kannst du Importe zum Beispiel lokal sichern oder sie mit anderen teilen.
@@ -778,7 +778,7 @@ Importeinstellungen exportieren:
 . Klicke auf *Format exportieren* (icon:system_update_alt[set=material]). +
 → Die Importeinstellungen werden als JSON-Datei auf deinem Rechner gespeichert.
 
-[#1640]
+[#import-import]
 === Importvorlage importieren
 
 Vielleicht bekommst du von unserem Support-Team eine Importvorlage. Auch im Handbuch sind einige Best-Practice-Dateien verfügbar. Oder ein netter Mensch aus dem Forum stellt einen gut konfigurierten Import zur Verfügung.
