--- a/docs/de-de/modules/artikel/pages/artikelsuche.adoc
+++ b/docs/de-de/modules/artikel/pages/artikelsuche.adoc
@@ -6,7 +6,7 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 02.06.2022
+zuletzt bearbeitet 15.06.2022
 ////
 
 //ToDo - falls es irgendwann die erweiterte Suche wieder gibt, dann die erweiterte Optionen wieder einbauen (die Erklärungen sind in die FAQs auskommentiert und ansonsten lokal auf dem Rechner gespeichert)
@@ -119,19 +119,19 @@ Beispiel: Suche nach allen Varianten, deren Nummern die Zahl 0123 enthalten, z.B
 
 !===
 
-//| Kategorien
-//|Klicke auf icon:pencil[role="darkGrey"] und wähle eine oder mehrere Kategorien aus dem Kategorienbaum aus (icon:check-square[role="blue"]).
-//Die Suchergebnisse liefern nur Produkte, die in _exakt_ diese Kategorie einsortiert sind.
+| Kategorien
+|Klicke auf icon:pencil[role="darkGrey"] und wähle eine oder mehrere Kategorien aus dem Kategorienbaum aus (icon:check-square[role="blue"]).
+Die Suchergebnisse liefern nur Produkte, die in _exakt_ diese Kategorie einsortiert sind.
 
-//*_Hinweis_*: Wenn du eine Hauptkategorie wählst, werden _nicht automatisch_ alle Unterkategorien mit ausgewählt.
+*_Hinweis_*: Wenn du eine Hauptkategorie wählst, werden _nicht automatisch_ alle Unterkategorien mit ausgewählt.
 
-//*_Beispiel_*:
-//Stell dir mal vor, in deinem System gibt es den Kategoriepfad "Kleidung » Oberteile » T-Shirts".
-//Wenn du nur die Hauptkategorie "Kleidung" wählst, dann wird die Unterkategorie "Kleidung » Oberteile » T-Shirts" _nicht mit ausgewählt_.
-//Deine Suchanfrage würde sich nur auf Artikel beziehen, die in die Hauptkategorie "Kleidung" sind.
+*_Beispiel_*:
+Stell dir mal vor, in deinem System gibt es den Kategoriepfad "Kleidung » Oberteile » T-Shirts".
+Wenn du nur die Hauptkategorie "Kleidung" wählst, dann wird die Unterkategorie "Kleidung » Oberteile » T-Shirts" _nicht mit ausgewählt_.
+Deine Suchanfrage würde sich nur auf Artikel beziehen, die in die Hauptkategorie "Kleidung" sind.
 
-//*_Wie wähle ich Unterkategorien?_*:
-//Klicke auf icon:chevron-right[role="darkGrey"], um eine Hauptkategorie zu öffnen und ihre Unterkategorien zu sehen.
+*_Wie wähle ich Unterkategorien?_*:
+Klicke auf icon:chevron-right[role="darkGrey"], um eine Hauptkategorie zu öffnen und ihre Unterkategorien zu sehen.
 
 | Verfügbarkeit
 |Wähle eine oder mehrere Verfügbarkeitsstufen aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
@@ -173,6 +173,17 @@ Die Suchergebnisse liefern nur Produkte, die _nicht_ mit einem dieser xref:artik
 
 *_Voraussetzung_*: Hast du bereits die xref:warenwirtschaft:suppliers.adoc#[Kontaktdaten für deine Lieferanten] in plentymarkets hinterlegt?
 Diese Dropdown-Liste enthält nur die Lieferanten, die bereits in deinem plentymarkets System vorhanden sind.
+
+| Hat niedrigsten Preis
+|Begrenzt die Suchergebnisse auf Varianten, die entweder einen Wert im Feld "niedrigster Preis der letzten 30 Tage" gespeichert haben oder nicht.
+
+*_Anwendungsbeispiel_*:
+Willst du prüfen, ob der niedrigste Preis der letzten 30 Tage für einige deiner ermäßigten Produkte vergessen wurde?
+
+. Setze den Suchfilter *Hat niedrigsten Preis* auf *Nein*.
+. Setze einen Suchfilter wie z.B. Verkaufspreis, Tag oder Kategorie auf das, was du für ermäßigte Produkte verwendest.
+
+xref:artikel:preise.adoc#950[Weitere Informationen zur Funktion des niedrigsten Preises].
 
 | Verkaufspreise
 |Wähle einen oder mehrere Verkaufspreise aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
