--- a/docs/de-de/modules/webshop/pages/ceres-3-update.adoc
+++ b/docs/de-de/modules/webshop/pages/ceres-3-update.adoc
@@ -138,29 +138,29 @@ Mit der Veröffentlichung von Ceres 3.0 wird das Bootstrap-Framework von Version
 |.hidden-xl-up
 |.d-xl-none
 
-|.pull-{breakpoint}-{direction}
-|.float-{breakpoint}-{direction}
+|.pull-&#123;breakpoint}-&#123;direction}
+|.float-&#123;breakpoint}-&#123;direction}
 
-|.m-{direction}-{spacer}
-|.m{direction}-{spacer}
+|.m-&#123;direction}-&#123;spacer}
+|.m&#123;direction}-&#123;spacer}
 
-|.p-{direction}-{spacer}
-|.p{direction}-{spacer}
+|.p-&#123;direction}-&#123;spacer}
+|.p&#123;direction}-&#123;spacer}
 
-|.m-x-{spacer}
-|.mx-{spacer}
+|.m-x-&#123;spacer}
+|.mx-&#123;spacer}
 
-|.m-y-{spacer}
-|.my-{spacer}
+|.m-y-&#123;spacer}
+|.my-&#123;spacer}
 
-|.offset-xs-{size}
-|.offset-{size}
+|.offset-xs-&#123;size}
+|.offset-&#123;size}
 
 |.m-x-auto
 |.mx-auto
 
-|.text-xs-{direction}
-|.text-{direction}
+|.text-xs-&#123;direction}
+|.text-&#123;direction}
 
 |.card-block
 |.card-body
