--- a/docs/en-gb/modules/markets/partials/check24-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/check24-recommended-mappings.adoc
@@ -1,6 +1,6 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
-|====
+|===
 |Marketplace field |Mandatory? |Recommended plentymarkets mapping
 
 | ID
@@ -111,4 +111,4 @@ _or_
 | Weight
 | no
 | * *Variation » Net weight g*
-|====
+|===
