--- a/docs/en-gb/modules/markets/partials/criteo-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/criteo-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marketplace field |Mandatory? |Recommended plentymarkets mapping
@@ -33,7 +33,7 @@ _or_
 
 | Google Shopping category
 | no
-| 
+|
 
 | Product URL
 | yes
@@ -83,19 +83,19 @@ _or_
 
 | Product type key
 | no
-| 
+|
 
 | Number of ratings
 | no
-| 
+|
 
 | Product rating
 | no
-| 
+|
 
 | Filter
 | no
-| 
+|
 
 | Mobile link
 | no
@@ -209,11 +209,11 @@ _or_
 
 | Multipack
 | no
-| 
+|
 
 | Is bundle
 | no
-| 
+|
 
 | Promotion ID
 | no
@@ -257,7 +257,7 @@ _or_
 
 | Expiration date
 | no
-| 
+|
 
 | Unit pricing measure
 | no
@@ -265,19 +265,19 @@ _or_
 
 | Unit pricing base measure
 | no
-| 
+|
 
 | Display ads value
 | no
-| 
+|
 
 | Display ads title
 | no
-| 
+|
 
 | Map price
 | no
-| 
+|
 
 | Map model
 | no
