--- a/docs/en-gb/modules/markets/partials/beezup-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/beezup-recommended-mappings.adoc
@@ -1,5 +1,5 @@
 
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marketplace field |Mandatory? |Recommended plentymarkets mapping
