--- a/docs/en-gb/modules/markets/partials/geizhals-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/geizhals-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2,1,4a"]
 |====
 |Marketplace field |Mandatory? |Recommended plentymarkets mapping
