--- a/docs/en-gb/modules/markets/partials/limango-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/limango-recommended-mappings.adoc
@@ -1,4 +1,4 @@
-[[recommended-mappings]]
+[[table-recommended-mappings]]
 [cols="2a,6a,2a"]
 |====
 |limango field |Recommended mapping / notes | limango product level
