--- a/docs/en-gb/modules/markets/pages/guenstiger-de.adoc
+++ b/docs/en-gb/modules/markets/pages/guenstiger-de.adoc
@@ -51,7 +51,7 @@ include::partial$export-formats.adoc[]
 
 :export-format: GuenstigerDE-Plugin
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [[columns-export-file-guenstiger-de]]
 .Available columns of the export file for the export format *GuenstigerDE-Plugin*
