--- a/docs/en-gb/modules/markets/pages/shopping24.adoc
+++ b/docs/en-gb/modules/markets/pages/shopping24.adoc
@@ -48,7 +48,7 @@ include::partial$export-formats.adoc[]
 
 :export-format: Shopping24DE-Plugin
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [columns-export-file-shopping24]
 .Columns of the export file for *Shopping24.de*
