--- a/docs/en-gb/modules/markets/pages/shopzilla.adoc
+++ b/docs/en-gb/modules/markets/pages/shopzilla.adoc
@@ -44,7 +44,7 @@ include::partial$export-formats.adoc[]
 
 :export-format: ShopzillaDE-Plugin
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [[columns-export-file-shopzilla]]
 .Available columns of the export file for the export format *ShopzillaDE-Plugin*
