--- a/docs/en-gb/modules/markets/pages/treepodia.adoc
+++ b/docs/en-gb/modules/markets/pages/treepodia.adoc
@@ -39,7 +39,7 @@ include::partial$export-formats.adoc[]
 
 :export-format: TreepodiaCOM-Plugin
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [[columns-export-file-treepodia]]
 .Available columns of the export file for the export format *TreepodiaCOM-Plugin*
