--- a/docs/en-gb/modules/markets/pages/twenga.adoc
+++ b/docs/en-gb/modules/markets/pages/twenga.adoc
@@ -50,7 +50,7 @@ include::partial$export-formats.adoc[]
 
 :export-format: TwengaCOM-Plugin
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [#columns-export-file]
 .Available columns for the export format
