--- a/docs/en-gb/modules/markets/pages/beezup.adoc
+++ b/docs/en-gb/modules/markets/pages/beezup.adoc
@@ -56,7 +56,7 @@ include::partial$export-formats.adoc[]
 
 :export-format: BeezUp-Plugin
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [TIP]
 .Columns for properties
