--- a/docs/en-gb/modules/markets/pages/criteo.adoc
+++ b/docs/en-gb/modules/markets/pages/criteo.adoc
@@ -48,7 +48,7 @@ include::partial$export-formats.adoc[]
 
 :export-format: Criteo-Plugin
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [[columns-export-file-criteo]]
 .Available columns of the export file for the export format *{export-format}*
