--- a/docs/en-gb/modules/markets/pages/geizhals-de.adoc
+++ b/docs/en-gb/modules/markets/pages/geizhals-de.adoc
@@ -47,7 +47,7 @@ include::partial$export-formats.adoc[]
 
 :export-format: GeizhalsDE-Plugin
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [[columns-export-file-geizhals-de]]
 .Available columns of the export file for the export format *GeizhalsDE-Plugin*
