--- a/docs/en-gb/modules/markets/pages/kauflux.adoc
+++ b/docs/en-gb/modules/markets/pages/kauflux.adoc
@@ -164,7 +164,7 @@ include::partial$export-formats.adoc[]
 [#export-file-kauflux]
 ==== Available columns for the export file
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [[kauflux-columns]]
 .Available columns for the export format
