--- a/docs/en-gb/modules/markets/pages/kupona.adoc
+++ b/docs/en-gb/modules/markets/pages/kupona.adoc
@@ -41,7 +41,7 @@ include::partial$export-formats.adoc[]
 [#300]
 == Available columns for the export file
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [[columns-export-file-kupona]]
 .Available columns of the export file for the export format *KuponaDE-Plugin*
