--- a/docs/en-gb/modules/markets/pages/mybestbrands.adoc
+++ b/docs/en-gb/modules/markets/pages/mybestbrands.adoc
@@ -53,7 +53,7 @@ include::partial$export-formats.adoc[]
 
 :export-format: MyBestBrandsDE-Plugin
 
-include::markets:partial$download_export-file.adoc[]
+include::partial$download_export-file.adoc[]
 
 [[columns-export-file-mybestbrands]]
 .Available columns of the export file for the export format *MyBestBrandsDE-Plugin*
