fix warnings en

--- a/docs/en-gb/modules/data/pages/data.adoc
+++ b/docs/en-gb/modules/data/pages/data.adoc
@@ -7,14 +7,11 @@ This area deals with exchanging data in plentymarkets. Data can be exchanged aut
 
 You can also use the data exchange to quickly and easily make changes and adapt settings in your plentymarkets system. Simply export the data of your items, customers, stocks or orders into a CSV file, make changes to the data and import the file back into the system.
 
-[.row]
-====
-[.col-md-4]
-.Data exchange
-=====
+*Import*
 * xref:data:ElasticSync.adoc#[Using the import tool]
+
+*Export* 
 * xref:data:FormatDesigner.adoc#[Creating data formats with FormatDesigner]
 * xref:data:elastic-export.adoc#[Exporting data with Elastic Export]
 * xref:business-decisions:manage-reports.adoc#[Exporting raw data]
 =====
-
