--- a/docs/en-gb/modules/data/pages/practical-example-elasticsync-listing-properties.adoc
+++ b/docs/en-gb/modules/data/pages/practical-example-elasticsync-listing-properties.adoc
@@ -12,7 +12,7 @@ First export the listings that you want to add properties to. You need a CSV fil
 
 The fields *EbayItemSpecificsName* and *EbayItemSpecificsValue* are required to create eBay properties.
 
-[instruction]
+[.instruction]
 Creating a data format:
 
 . Go to *Data » Dynamic export*.
@@ -39,7 +39,7 @@ _Example:_ Enter the values "Colour", "Size" into the *name* column separated by
 
 The import tool enables you to import the CSV file containing the new properties into plentymarkets. This is done in the *Data » Import* menu. To import the properties, create an import of the type *Market listing*.
 
-[instruction]
+[.instruction]
 Creating an import:
 
 . Go to *Data » Import*.
@@ -56,7 +56,7 @@ Creating an import:
 
 You have uploaded the CSV file successfully. Next, carry out the matching and mapping settings.
 
-[instruction]
+[.instruction]
 Carrying out the matching settings:
 
 . Click on *Matching* on the left-hand side.
@@ -67,7 +67,7 @@ Carrying out the matching settings:
 
 Next, carry out the settings for mapping.
 
-[instruction]
+[.instruction]
 Carrying out the mapping settings:
 
 . Click on *Mapping* on the left-hand side.
@@ -80,7 +80,7 @@ In this area, you assign the fields from your CSV file to the data fields in ple
 
 In the *Import data* section on the left-hand side, you can see the header names from your CSV file. plentymarkets has taken these names automatically from your CSV file. In the *plentymarkets data fields* section on the right-hand side, you have to select the corresponding counterpart from the list.
 
-[instruction]
+[.instruction]
 Example: Assigning sources for eBay properties to the appropriate plentymarkets data fields
 
 . On the left side, you can see the source *MLID*. Click in the same line on the right-hand side and assign the *MLID* data field by placing a check mark.
