--- a/docs/de-de/modules/plugins/pages/installierte-plugins-aktualisieren.adoc
+++ b/docs/de-de/modules/plugins/pages/installierte-plugins-aktualisieren.adoc
@@ -4,7 +4,7 @@
 :description: Installierte Plugins aktualisieren.
 :id: YTCRHEX
 
-Manchmal stellen Plugin-Anbieter eine neuere Version ihres Plugins zu Verfügung. Hast du so ein Plugin bereits in einem Plugin-Set installiert, musst du es aktualisieren, um es in der neueren Version zu nutzen. Da es sich hierbei um eine Änderung an dem Plugin-Set handelt, solltest du vor dem Aktualiseren des Plugins eine Kopie des Sets erstellen.
+Erste Änderung. Manchmal stellen Plugin-Anbieter eine neuere Version ihres Plugins zu Verfügung. Hast du so ein Plugin bereits in einem Plugin-Set installiert, musst du es aktualisieren, um es in der neueren Version zu nutzen. Da es sich hierbei um eine Änderung an dem Plugin-Set handelt, solltest du vor dem Aktualiseren des Plugins eine Kopie des Sets erstellen.
 
 include::partial$sicherheitskopie.adoc[]
 
