--- a/docs/de-de/modules/plugins/pages/installierte-plugins-entfernen.adoc
+++ b/docs/de-de/modules/plugins/pages/installierte-plugins-entfernen.adoc
@@ -4,7 +4,7 @@
 :description: Plugins aus Plugin-Sets entfernen.
 :id: MSCTNZP
 
-Es gibt verschiedene Möglichkeiten, installierte Plugins zu entfernen. Du kannst Plugins einzeln <<plugin-deaktivieren, deaktiveren>>, damit sie nicht mehr in deinem Webshop und Backend geladen werden oder sie vollständig <<plugin-aus-plugin-set-loeschen, aus einem Plugin-Set löschen>>. Wenn du alle Plugins eines Sets löschen möchtest, kannst du stattdessen <<plugin-set-löschen, das Plugin-Set selbst löschen>>.
+Zweite Änderung. Es gibt verschiedene Möglichkeiten, installierte Plugins zu entfernen. Du kannst Plugins einzeln <<plugin-deaktivieren, deaktiveren>>, damit sie nicht mehr in deinem Webshop und Backend geladen werden oder sie vollständig <<plugin-aus-plugin-set-loeschen, aus einem Plugin-Set löschen>>. Wenn du alle Plugins eines Sets löschen möchtest, kannst du stattdessen <<plugin-set-löschen, das Plugin-Set selbst löschen>>.
 
 Du kannst Plugins, die du auf plentyMarketplace erworben hast, nicht vollständig aus deinem System entfernen. Handelt es sich allerdings um ein Git-Plugin, kannst du <<git-repository-loeschen, das zugehörige Repository löschen>>.
 
