--- a/docs/en-gb/modules/markets/pages/mytoys.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys.adoc
@@ -568,7 +568,7 @@ Adjusting template for delivery notes:
 2+^| *Columns stock units* area
 
 | *Item name*
-| |Activate option *EAN*.
+| Activate option *EAN*.
 
 | *Unit price*; +
 *Total price (net)*; +
