--- a/docs/en-gb/modules/markets/pages/shopping24.adoc
+++ b/docs/en-gb/modules/markets/pages/shopping24.adoc
@@ -50,7 +50,7 @@ include::partial$export-formats.adoc[]
 
 include::partial$download_export-file.adoc[]
 
-[columns-export-file-shopping24]
+[[columns-export-file-shopping24]]
 .Columns of the export file for *Shopping24.de*
 [cols="1,3a"]
 |===
