--- a/docs/en-gb/modules/business-decisions/pages/manage-reports.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/manage-reports.adoc
@@ -174,7 +174,7 @@ For further information, refer to the xref:business-decisions:users.adoc#[users]
 
 |variationValidation
 |Variations that have been exported to markets but have been rejected +
-For further information, refer to the <<business-decisions/plenty-bi/reports/data-formats/marketplacevariationvalidation#, variationValidation#, variationValidation>> page of the manual.
+For further information, refer to the xref:business-decisions:marketplace-variation-validation.adoc#[variationValidation] page of the manual.
 
 |====
 
