Added info box about new Kaufland referrers

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -229,6 +229,12 @@ Lager verknüpfst du über die Einstellung *Lager verknüpfen* im Menü *Einrich
 include::partial$auftragsherkunft-aktivieren.adoc[]
 
 [IMPORTANT]
+.Untergeordnete Kaufland-Herkünfte nicht aktivieren
+====
+Die Herkünfte *102.01 Kaufland DE*, *102.02 Kaufland CZ* und *102.03 Kaufland SK* haben momentan noch keine Verwendung und müssen deshalb deaktiviert werden. Wenn diese Herkünfte aktiviert sind, kann es zu Fehlern beim Bestands- und Preisabgleich kommen. 
+====
+
+[IMPORTANT]
 .Kaufland.de-Aufträge nicht gruppieren
 ====
 Beim Auftragsimport von Kaufland.de findet der Abgleich über die externe Auftragsnummer statt. Bei einem gruppierten Auftrag existiert aber keine externe Auftragsnummer mehr. Deshalb besteht die Gefahr, dass Aufträge beim nächsten Abruf erneut erstellt werden.
