--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -227,6 +227,12 @@ Link warehouses with the option *Link warehouses* in the menu *Setup » Markets 
 include::partial$activate-referrer.adoc[]
 
 [IMPORTANT]
+.Do not activate subordinate Kaufland referrers
+====
+The referrers *102.01 Kaufland DE*, *102.02 Kaufland CZ*, and *102.03 Kaufland SK* are currently without function and therefore, they must be deactivated. If these referrers are activated, this can result in errors during the stock and price updates. 
+====
+
+[IMPORTANT]
 .Do not group Kaufland.de orders
 ====
 During the order import, Kaufland.de orders are synchronised by the external order number. However, in grouped orders, the external order number no longer exists. As such, grouping orders might result in orders being created anew when they are retrieved again.
