fix warnings - EN

--- a/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
@@ -380,7 +380,7 @@ You can continue working during the export process. +
 . Save the file on your computer.
 --
  
-Regular file export::
+Regularly occuring file export::
 +
 --
 
