--- a/docs/en-gb/modules/data/pages/export-standard-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-standard-formats.adoc
@@ -196,7 +196,7 @@ The following placeholders are available:
 * Comma = ,
 * Semicolon = ;
 * Pipe = |
-* Tabulator = ␉
+* Tabulator = →
 
 | *Text delimiter*
 | Which text delimiter should separate the individual records from each other?
