--- a/docs/en-gb/modules/data/pages/export-standard-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-standard-formats.adoc
@@ -194,7 +194,7 @@ The following placeholders are available:
 *_Possible values:_*
 
 * comma = ,
-* Semikcolon = &#x3B;
+* Semicolon = &#x3B;
 * Pipe = &#x007C;
 * Tabulator = &#9225;
 
