--- a/docs/en-gb/modules/markets/pages/kauflux.adoc
+++ b/docs/en-gb/modules/markets/pages/kauflux.adoc
@@ -62,7 +62,7 @@ include::partial$activate-referrer.adoc[]
 == Setting the variation availability
 
 :market-availability: Kauflux
-:market-availability: Kauflux
+:option-availability: Kauflux
 
 include::partial$variation-availability.adoc[]
 
