Kathrin/fix warnings en (#632)
* Update ceres-3-update.adoc

* fix warnings . en

* fix warnings - en

* fix warnings en

* fix warnings - en

* Update mytoys.adoc

* Update shopping24.adoc

* fix warning - en

* warning - EN

* Update mytoys.adoc

* fix warnings - EN

* Update export-standard-formats.adoc

* Update catalogue-format-order.adoc

* Update export-standard-formats.adoc

* warnings - EN

--- a/docs/en-gb/modules/markets/pages/mytoys.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys.adoc
@@ -89,7 +89,7 @@ include::partial$assistant-basic-instructions.adoc[]
 [[table-basic-settings-assistant]]
 [width="100%"]
 [cols="1,2a"]
-|======
+|===
 |Setting |Explanation
 
 2+^| Step *API settings*
@@ -149,7 +149,7 @@ Select one or several warehouses that contain the products that you want to sell
 | Select the client that imported orders should be assigned to.
 | Select the client that you want to use to sell on {market}. +
 *_Note:_* If you want to sell your products on {market} using your default client, you do not need to select a client.
-|====
+|===
 --
 
 [#400]
@@ -561,14 +561,14 @@ Adjusting template for delivery notes:
 [[table-delivery-notes]]
 .Settings for {market} delivery notes
 [cols="2,3a"]
-|====
+|===
 |Setting |Option
 
 //tag::document-settings[]
 2+^| *Columns stock units* area
 
 | *Item name*
-| |Activate option *EAN*.
+| Activate option *EAN*.
 
 | *Unit price*; +
 *Total price (net)*; +
@@ -621,9 +621,8 @@ image::markets:mytoys-delivery-note-settings-2.png[]
 | Select the option *Yes*.
 
 image::markets:mytoys-delivery-note-settings-3.png[]
-
-|====
 //end::document-settings[]
+|===
 
 [#return-notes]
 === Preparing return slips
@@ -704,10 +703,12 @@ Adjusting template for return slips:
 [[table-return-notes]]
 .Settings for {market} return slips
 [cols="2,3a"]
-|====
+|===
 |Setting |Option
 
 include::page$mytoys.adoc[tag=document-settings]
+|===
+
 
 [#order-processing]
 == Automating order processing
