fix warnings - EN

--- a/docs/en-gb/modules/fulfilment/partials/ebay-fulfillment-by-orange-connex.adoc
+++ b/docs/en-gb/modules/fulfilment/partials/ebay-fulfillment-by-orange-connex.adoc
@@ -508,7 +508,7 @@ Setting up an event procedure for moving the outbound order to the correct statu
 . Select the option *Active* to activate the event procedure.
 . *Save* (icon:save[role="green"]) the settings.
 
-[#ep-move-outbound-order]
+[#ep-send-outbound-order]
 === Setting up an event procedure to send the outbound order to eBay Fulfillment by Orange Connex
 
 Proceed as described in the following to set up the event procedure.
