--- a/docs/en-gb/modules/markets/pages/conrad.adoc
+++ b/docs/en-gb/modules/markets/pages/conrad.adoc
@@ -135,7 +135,7 @@ The link:{valid-values-zip}[{market}: valid values^] ZIP file contains CSV files
 include::partial$mirakl-data-link-categories.adoc[]
 
 [#link-properties-with-variations]
-==== Linking properties with variations and saving values
+=== Linking properties with variations and saving values
 
 include::partial$properties-link.adoc[]
 
