--- a/docs/en-gb/modules/markets/pages/eBay-marketing.adoc
+++ b/docs/en-gb/modules/markets/pages/eBay-marketing.adoc
@@ -202,7 +202,7 @@ Users with *Backend* access need rights for menu visibilities and REST-API to us
 
 Open the *Setup » Settings » User » Rights » User* menu to assign rights.
 
-==== Required rights for the eBay Marketing plugin
+=== Required rights for the eBay Marketing plugin
 
 Users with *Backend* access require the rights listed in <<#table-ebay-marketing-rights>>.
 
