--- a/docs/en-gb/modules/markets/partials/manage-listings.adoc
+++ b/docs/en-gb/modules/markets/partials/manage-listings.adoc
@@ -971,7 +971,7 @@ a| Select *Basic settings*, *Yes* or *No*. +
 [#4300]
 === Editing multiple listings
 
-//tag::create-multiple-listings[]
+//tag::edit-multiple-listings[]
 Edit multiple listings with the *Group function* or the *Batch processing* function in the *Listings* menu. The group function edits previously selected listings. The batch processing function edits previously filtered listings.
 
 [TIP]
