Kathrin/fix warnings en 2 (#639)
* Update mytoys.adoc

* Merge branch 'main' of https://github.com/plentymarkets/plenty-manual-docs

* fix warnings - EN

--- a/docs/en-gb/modules/markets/pages/idealo-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/idealo-setup.adoc
@@ -854,7 +854,7 @@ Creating a characteristic for WEEE take back:
 
 Next, you have to link the characteristic to the item in the *Item » Edit item » [Open item] » [Open variation] » Variation tab: Characteristics* menu.
 
-[instruction]
+[.instruction]
 Linking the characteristic for WEEE take back to an item:
 
 . Go to *Item » Edit item*.
